--- a/changeformatweb/Dockerfile
+++ b/changeformatweb/Dockerfile
@@ -1,7 +1,7 @@
 # --- STEP 1: Pakai base image Python slim
 FROM python:3.10-slim
 
-# --- STEP 2: Install dependensi sistem (termasuk libreoffice)
+# --- STEP 2: Install dependensi sistem (termasuk LibreOffice)
 RUN apt-get update && \
     apt-get install -y --no-install-recommends \
       libreoffice-core \
@@ -10,21 +10,20 @@ RUN apt-get update && \
       libreoffice-common && \
     rm -rf /var/lib/apt/lists/*
 
-# --- STEP 3: Copy requirements dan install Python packages
+# --- STEP 3: Set working directory
 WORKDIR /app
-COPY requirements.txt /app/requirements.txt
-RUN pip install --no-cache-dir -r /app/requirements.txt
 
-# --- STEP 4: Copy semua source code ke /app
-COPY . /app
+# --- STEP 4: Copy requirements dan install Python packages
+COPY requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
 
-# --- STEP 5: Ekspos port yang akan digunakan Flask
-ARG PORT=5000
-ENV PORT=${PORT}
+# --- STEP 5: Copy semua source code
+COPY . .
 
-# --- STEP 6: Pastikan folder uploads/ dan converted/ ada
+# --- STEP 6: Buat folder uploads dan converted
 RUN mkdir -p /app/uploads /app/converted
 
-# --- STEP 7: Jalankan Flask
-#      (Flask nanti membaca env PORT; jika tidak ada, default 5000)
-CMD ["gunicorn", "--bind", "0.0.0.0:${PORT}", "app:app"]
+# --- STEP 7: Expose port dan jalankan aplikasi dengan gunicorn
+ENV PORT=5000
+EXPOSE 5000
+CMD ["gunicorn", "--bind", "0.0.0.0:5000", "app:app"]
